--- a/index.html
+++ b/index.html
@@ -1,80 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Let's customise!</title>
 </head>
-
 <body>
-    <!-- Develop a HTML page to create a Profile page. Suggestions to include personal details, skill sets, photograph, intro audio, video etc (include formatting , image, anchor, table, list  and semantic tags). -->
-    <!-- semantic tag -->
-    <center> 
-    <h1>Deepak Sharma</h1>
-    <h2>VESIT, Mumbai, India</h2>
-    <img src="https://lh3.googleusercontent.com/a-/AFdZucoffOyxAsT0NiQ-EomkKJqigbL14rmxD9_zThHGBQ=s96-c-rg-br100" style="width:200px" height="200px"></img>
-    <hr>
-    
-    <table border="1px">
-        <thead>
-            <td><b>Degree</b></td>
-            <td><b>Bachelor's in Engineering</b></td>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Branch</td>
-            <td>Information Technology</td>
-        </tr>
-        <tr>
-            <td>Year</td>
-            <td>Third Year</td>
-        </tr>
-    </tbody>
-    </table>
-    </center>
-    <article>
-    <h3 >Interests </h3>
-        <ul>
-            <li>Programming</li>
-            <li>Reading</li>
-            <li>Sports</li>
-            <li>Learning New Languages</li>
-            <li>Watching Movies</li>
-            <li>Listening music</li>
-            <li>Gaming</li>
-            <li>Dancing</li>
-        </ul>
-
-    <h3>Strengths</h3>
-    <ul>
-        <li>Creative</li>
-        <li>Logic Building</li>
-        <li>Good Listener</li>
-        <li>Quick learner</li>
-        <li>Punctual</li>
-        <li>Leadership Skills</li>
-    </ul>
-
-</article>
-    <hr>
-<center><footer style="background-color: pink;">
-    <h3 style="color: magenta;">Deepak's Profile</h3></footer>
-<video width="320" height="240" controls>
-    <source="https://youtu.be/aH15Qg42zyM">
-</video>
-
-<hr>
-<audio controls>
-    <source src="horse.ogg" type="audio/ogg">
-    <source src="horse.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
-<hr>
-</center>
-
-
+<form action="" enctype="multipart/form-data" method="put">
+<h3>Order Details</h3>
+<p>Your Order:</p>
+<img width="250px" src="https://assets.ajio.com/medias/sys_master/root/20220401/oHAf/62470e90f997dd03e2433bc8/ausk_maroon_short_sleeve_crew-neck__t-shirt.jpg" alt=""><br><hr><br>
+<label for="tagline">Enter Tagline:</label><br>
+<input type="text" name="tagline" id="tagline"><br><hr><br>
+<label for="color">Choose Color:</label><br>
+<input type="radio" id="red" name="color" value="Red">
+<label for="red">Red</label><br>
+<input type="radio" id="white" name="color" value="White">
+<label for="white">White</label><br>
+<input type="radio" id="blue" name="color" value="blue">
+<label for="blue">Blue</label><br><hr><br>
+<label for="size">Select Size:</label><br>
+<select id="size" name="size">
+<option value="25">XS</option>
+<option value="30">S</option>
+<option value="35">M</option>
+<option value="40">L</option>
+<option value="40">XL</option>
+</select><br><hr><br>
+<label for="quantity">Quantity: </label><br>
+<select id="quantity" name="quantity">
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+</select><br><hr><br>
+<label for="price">Total Order Price: <strong>Rs.599</strong></label><br><br>
+<label for="payment_options">Payment Options:</label><br>
+<input type="radio" id="cc" name="color" value="Credit/Debit Card">
+<label for="cc">Credit/Debit Card</label><br>
+<input type="radio" id="upi" name="color" value="UPI">
+<label for="upi">UPI</label><br>
+<input type="radio" id="crypto" name="color" value="Crypto">
+<label for="crypto">Cash on Delivery</label><br><hr><br>
+<label for="address">Delivery Address:</label><br>
+<input type="text" id="address"> <br><br>
+<button type="submit">Place Order</button><br><hr><br>
+<p>
+    <b><i>Please note:</i></b> You shall recieve your order within 5-7 business days.<br>
+    You can track your order by logging in your account on our website.<br><br>
+</p>
+<h3><strong>Happy Shopping!</strong></h3>
+</form>
 </body>
-
 </html>
